[gd_scene load_steps=28 format=3 uid="uid://cp6vdilhsj5tc"]

[ext_resource type="PackedScene" uid="uid://vfep1hrbvdrv" path="res://Player/Player.tscn" id="1_3lej4"]
[ext_resource type="Environment" uid="uid://by8h0tn32w4bm" path="res://MainEnvironment.tres" id="1_hi0mt"]
[ext_resource type="PackedScene" uid="uid://4r6u8e6038lx" path="res://GUI/PerformanceMenu/PerformanceMonitor.tscn" id="3_k65b8"]
[ext_resource type="Script" path="res://SubViewport.gd" id="4_csu22"]
[ext_resource type="AudioStream" uid="uid://ddihqdr5kjk1h" path="res://Audio/Whistle.mp3" id="5_8cofo"]
[ext_resource type="Material" uid="uid://72a2src4srq" path="res://Materials/LevelPrototype.tres" id="6_6metw"]
[ext_resource type="Script" path="res://DebugViewport.gd" id="6_k0b0o"]
[ext_resource type="Material" uid="uid://bjbsv7ds3f3wc" path="res://Materials/LevelPrototypeOrange.tres" id="7_7k385"]
[ext_resource type="Shader" path="res://Materials/base_shader.gdshader" id="8_rcn1d"]
[ext_resource type="Script" path="res://mesh_instance_3d_2.gd" id="9_cyqs6"]
[ext_resource type="Script" path="res://Post/mask_camera.gd" id="9_kkefa"]
[ext_resource type="Script" path="res://object_mask_viewport.gd" id="10_ltqwb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_57vds"]
albedo_color = Color(0.72549, 0, 0.729412, 1)

[sub_resource type="SphereMesh" id="SphereMesh_l5f4q"]
material = SubResource("StandardMaterial3D_57vds")

[sub_resource type="GDScript" id="GDScript_t1dgv"]
script/source = "extends AudioSource

func _ready():
	play_stream(0)
	pass
"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qll04"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="ImmediateMesh" id="ImmediateMesh_2noit"]

[sub_resource type="Image" id="Image_jkudj"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 14, 0, 0, 0, 43, 0, 0, 0, 63, 0, 0, 0, 72, 0, 0, 0, 72, 0, 0, 0, 63, 0, 0, 0, 43, 0, 0, 0, 13, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 3, 0, 0, 0, 45, 64, 64, 64, 91, 201, 201, 201, 169, 239, 239, 239, 223, 251, 251, 251, 248, 251, 251, 251, 248, 239, 239, 239, 223, 199, 199, 199, 169, 61, 61, 61, 91, 0, 0, 0, 44, 0, 0, 0, 3, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 3, 0, 0, 0, 57, 162, 162, 162, 137, 251, 251, 251, 248, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 251, 251, 251, 247, 159, 159, 159, 135, 0, 0, 0, 56, 0, 0, 0, 3, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 45, 162, 162, 162, 137, 255, 255, 255, 255, 255, 255, 255, 255, 255, 215, 215, 255, 255, 142, 142, 255, 255, 110, 110, 255, 255, 110, 110, 255, 255, 142, 142, 255, 255, 216, 216, 255, 255, 255, 255, 255, 255, 255, 255, 255, 159, 159, 159, 135, 0, 0, 0, 44, 255, 255, 255, 0, 0, 0, 0, 14, 64, 64, 64, 91, 251, 251, 251, 248, 255, 255, 255, 255, 255, 176, 176, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 178, 178, 255, 255, 255, 255, 255, 251, 251, 251, 246, 59, 59, 59, 90, 0, 0, 0, 13, 0, 0, 0, 43, 201, 201, 201, 169, 255, 255, 255, 255, 255, 215, 215, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 96, 96, 255, 255, 217, 217, 255, 255, 255, 255, 255, 199, 199, 199, 167, 0, 0, 0, 42, 0, 0, 0, 63, 239, 239, 239, 223, 255, 255, 255, 255, 255, 142, 142, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 143, 143, 255, 255, 255, 255, 255, 238, 238, 238, 222, 0, 0, 0, 63, 0, 0, 0, 72, 251, 251, 251, 248, 255, 255, 255, 255, 255, 110, 110, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 110, 110, 255, 255, 255, 255, 255, 251, 251, 251, 247, 0, 0, 0, 72, 0, 0, 0, 72, 251, 251, 251, 248, 255, 255, 255, 255, 255, 110, 110, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 111, 111, 255, 255, 255, 255, 255, 251, 251, 251, 246, 0, 0, 0, 72, 0, 0, 0, 63, 239, 239, 239, 223, 255, 255, 255, 255, 255, 142, 142, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 144, 144, 255, 255, 255, 255, 255, 238, 238, 238, 221, 0, 0, 0, 63, 0, 0, 0, 43, 199, 199, 199, 169, 255, 255, 255, 255, 255, 216, 216, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 96, 96, 255, 255, 217, 217, 255, 255, 255, 255, 255, 198, 198, 198, 166, 0, 0, 0, 42, 0, 0, 0, 13, 61, 61, 61, 91, 251, 251, 251, 247, 255, 255, 255, 255, 255, 178, 178, 255, 255, 96, 96, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 95, 95, 255, 255, 96, 96, 255, 255, 179, 179, 255, 255, 255, 255, 255, 250, 250, 250, 246, 57, 57, 57, 89, 0, 0, 0, 13, 255, 255, 255, 0, 0, 0, 0, 44, 159, 159, 159, 135, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 217, 255, 255, 143, 143, 255, 255, 110, 110, 255, 255, 111, 111, 255, 255, 144, 144, 255, 255, 217, 217, 255, 255, 255, 255, 255, 255, 255, 255, 255, 157, 157, 157, 132, 0, 0, 0, 43, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 3, 0, 0, 0, 56, 159, 159, 159, 135, 251, 251, 251, 246, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 250, 250, 250, 246, 157, 157, 157, 132, 0, 0, 0, 55, 0, 0, 0, 2, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 3, 0, 0, 0, 44, 59, 59, 59, 90, 199, 199, 199, 167, 238, 238, 238, 222, 251, 251, 251, 247, 251, 251, 251, 246, 238, 238, 238, 221, 198, 198, 198, 166, 57, 57, 57, 89, 0, 0, 0, 43, 0, 0, 0, 2, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 13, 0, 0, 0, 42, 0, 0, 0, 63, 0, 0, 0, 72, 0, 0, 0, 72, 0, 0, 0, 63, 0, 0, 0, 42, 0, 0, 0, 13, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ok2ks"]
image = SubResource("Image_jkudj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lc81s"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = SubResource("ImageTexture_ok2ks")
use_point_size = true
point_size = 16.0

[sub_resource type="ArrayMesh" id="ArrayMesh_2yvnd"]
_surfaces = [{
"aabb": AABB(-1.25, -0.5, 0, 2.25, 1.5, 1e-05),
"format": 34359738369,
"material": SubResource("StandardMaterial3D_lc81s"),
"primitive": 0,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 160, 191, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0)
}]

[sub_resource type="Environment" id="Environment_yxtto"]
background_mode = 1
ambient_light_source = 1
reflected_light_source = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_p6x8n"]
viewport_path = NodePath("ObjectMaskViewport")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u8n0v"]
radius = 0.501
height = 2.001

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0y5b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6kydu"]
render_priority = 0
next_pass = SubResource("ShaderMaterial_b0y5b")
shader = ExtResource("8_rcn1d")
shader_parameter/object_screen_position = null

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fgkpe"]
material = SubResource("ShaderMaterial_6kydu")

[node name="World" type="Node3D"]

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.876861, -0.214642, 0.430167, -0.257489, 0.545936, 0.797279, -0.405973, -0.809866, 0.423442, 0, 0, 0)
shadow_enabled = true
shadow_normal_bias = 2.245

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_hi0mt")

[node name="PerformaceDisplay" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_k65b8")]
player = NodePath("../Player")

[node name="TopDownDebug" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(512, 512)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 0

[node name="DebugViewport" type="SubViewportContainer" parent="TopDownDebug" node_paths=PackedStringArray("player")]
layout_mode = 2
stretch = true
script = ExtResource("6_k0b0o")
player = NodePath("../../Player")

[node name="SubViewport" type="SubViewport" parent="TopDownDebug/DebugViewport"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0
script = ExtResource("4_csu22")

[node name="DebugCam" type="Camera3D" parent="TopDownDebug/DebugViewport/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3.70246, 1.69295, 0)
visible = false
projection = 1
size = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="TopDownDebug"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Voume" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="RoomSize" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="RoomIntegrity" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="WetLabel" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PanStrength" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2

[node name="PanCorrection" type="Label" parent="TopDownDebug/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2093, 5.84396, -21.9484)
mesh = SubResource("SphereMesh_l5f4q")

[node name="AudioSource" type="AudioStreamPlayer3D" parent="MeshInstance3D"]
volume_db = -80.0
bus = &"WorldSound"
script = SubResource("GDScript_t1dgv")
audio_streams = Array[AudioStream]([ExtResource("5_8cofo")])
use_occlusion = true

[node name="Player" parent="." instance=ExtResource("1_3lej4")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 1.28567, -5.5)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.99398, -2.42457, 0)
use_collision = true

[node name="Floor" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.25)
size = Vector3(100, 1, 100)
material = ExtResource("6_6metw")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2.5, 0)
size = Vector3(9, 8, 9)
material = ExtResource("7_7k385")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 0)
operation = 2
size = Vector3(6, 4, 6)
material = ExtResource("7_7k385")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
operation = 2
size = Vector3(3.5, 2, 1)
material = ExtResource("7_7k385")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-2.98023e-08, 0, 1, 0, 1, 0, -1, 0, -2.98023e-08, -3.25, 3.5, -4)
operation = 2
size = Vector3(3.5, 2, 1)
material = ExtResource("7_7k385")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 1, -2)
polygon = PackedVector2Array(-2, 0, 0, 1.5, 1, 1.5, 1, 0)
material = ExtResource("7_7k385")

[node name="CSGPolygon3D2" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.75, 1, -4.5)
polygon = PackedVector2Array(-3.25, -0.5, 0, 1.5, 1, 1.5, 1, -0.5)
material = ExtResource("7_7k385")

[node name="CSGPolygon3D3" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.75, 1, -6.5)
polygon = PackedVector2Array(-3.25, 3.75, 1, 1.5, 1, 0.5, -3.25, 3)
material = ExtResource("7_7k385")

[node name="CSGCombiner3D2" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.99398, -2.42457, -14.25)
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 4.5, 0)
size = Vector3(9, 8, 9)
material = ExtResource("7_7k385")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.25, 5, 0)
operation = 2
size = Vector3(6, 5, 6)
material = ExtResource("7_7k385")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
operation = 2
size = Vector3(3.5, 2, 1)
material = ExtResource("7_7k385")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(-2.98023e-08, 0, 1, 0, 1, 0, -1, 0, -2.98023e-08, -3.25, 5.75, -0.75)
operation = 2
size = Vector3(11.5, 2, 1)
material = ExtResource("7_7k385")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(-2.98023e-08, 0, 1, 0, 1, 0, -1, 0, -2.98023e-08, -3.25, 4.5, -2.5)
size = Vector3(11.5, 0.5, 1)
material = ExtResource("7_7k385")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="CSGCombiner3D2"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.75, 2.75, 2)
polygon = PackedVector2Array(-1, 2, 1.25, 0.75, 1.25, 0, -1, 0)
material = ExtResource("7_7k385")

[node name="155256" type="MeshInstance3D" parent="CSGCombiner3D2/CSGPolygon3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1e-05)
material_override = SubResource("StandardMaterial3D_qll04")
mesh = SubResource("ImmediateMesh_2noit")

[node name="13114" type="MeshInstance3D" parent="CSGCombiner3D2/CSGPolygon3D/155256"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1e-05)
mesh = SubResource("ArrayMesh_2yvnd")

[node name="CSGPolygon3D2" type="CSGPolygon3D" parent="CSGCombiner3D2"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -6.25, 3, 2)
polygon = PackedVector2Array(-1.25, -0.5, 0, 0.75, 1, 1, 1, 0)
material = ExtResource("7_7k385")

[node name="155256" type="MeshInstance3D" parent="CSGCombiner3D2/CSGPolygon3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1e-05)
material_override = SubResource("StandardMaterial3D_qll04")
mesh = SubResource("ImmediateMesh_2noit")

[node name="13114" type="MeshInstance3D" parent="CSGCombiner3D2/CSGPolygon3D2/155256"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1e-05)
mesh = SubResource("ArrayMesh_2yvnd")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 2.98023e-08, 1, 0, -1, 2.98023e-08, -3.25, 6.75, -14.5)
light_energy = 1.118
shadow_enabled = true
spot_attenuation = 2.14355
spot_angle = 27.79

[node name="ObjectMaskViewport" type="SubViewport" parent="."]
use_hdr_2d = true
positional_shadow_atlas_size = 0
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
size = Vector2i(1920, 1080)
render_target_update_mode = 4
script = ExtResource("10_ltqwb")

[node name="MaskCamera" type="Camera3D" parent="ObjectMaskViewport" node_paths=PackedStringArray("player")]
cull_mask = 524288
environment = SubResource("Environment_yxtto")
script = ExtResource("9_kkefa")
player = NodePath("../../Player")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -656.0
offset_top = -376.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource("ViewportTexture_p6x8n")
expand_mode = 1
stretch_mode = 4

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_u8n0v")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D4"]
layers = 524289
mesh = SubResource("CapsuleMesh_fgkpe")
skeleton = NodePath("../..")
script = ExtResource("9_cyqs6")
